--- a/index.html
+++ b/index.html
@@ -6,9 +6,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>portfolio 2</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <section class="top-banner">
+        <div class="half-wid">
+            <img src="zerin.png" alt="">
+        </div>
+        <div class="half-wid">
+            <h1>WELCOME TO</h1>
+            <h1><span class="orange-color">Sumaiya Zerin</span> World</h1>
+            <h3>Build my own website and travel with some new experience</h3>
+            <p>Hello!I am sumaiya zerin.You called me just sumu or zerin.Todays i am so excited to creat my own
+                website.Its
+                like a another level experience in my life in first time as a new web-devolopment journey.Have freedom
+                to
+                work whenever you want from wherever—imagine that. All you need for web development is the internet and
+                a
+                laptop. Not all jobs are remote, but if that is your preference, there are remote jobs out there for
+                you.
+            </p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/zerin-mia-49690a229/">HAIR ME</a>
+        </div>
+    </section>
+    <section class="top-banner">
+        <div class="half-wid">
+            <h1><span class="pink">Open Your Wings!!</h1>
+            <h3>Become a web developer </h3>
+
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how
+                to make simple website. My goal is to build 3 websites and learn advanced
+                topics.</p>
+            <a class="button" target="_blank" href="">DOWNLOAD RESUME</a>
+        </div>
+
+
+    </section>
 
 </body>
 
