--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="half-wid">
             <img src="zerin.png" alt="">
         </div>
@@ -30,7 +30,7 @@
             <a class="link-button" target="_blank" href="https://www.linkedin.com/in/zerin-mia-49690a229/">HAIR ME</a>
         </div>
     </section>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="half-wid">
             <h1><span class="pink">Open Your Wings!!</h1>
             <h3>Become a web developer </h3>
@@ -40,10 +40,29 @@
                 topics.</p>
             <a class="button" target="_blank" href="">DOWNLOAD RESUME</a>
         </div>
-
-
     </section>
-
+    <section class="experience-area">
+        <h1>Experience</h1>
+        <div class="flexible-container">
+            <div id="web-devoloper-experince" class="experience-item">
+                <h1>Full Stack Devoloper</h1>
+                <h3>
+                    <span= class="orange-color">2024-Present | Pro Level Developer</span>
+                </h3>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
+                    efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called
+                    Vue
+                    JS. I even know the deployment, server and security. I will give you 100% web solution.
+            </div>
+            <div id="web-devoloper-experince" class="experience-item">
+                <h1>Baby Web Developer</h1>
+                <h3> <span class="orange-color"> 2022-2024 |Hero Lerner Devoloper</span></h3>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and
+                    showed
+                    it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
